# XOFs

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ascon-xof128.yml  bash-prg-hash.yml  cshake.yml  k12.yml  publish.yml  security-audit.yml  shake.yml  turboshake.yml  workspace.yml
ascon-xof128/: CHANGELOG.md  Cargo.toml  README.md
ascon-xof128/benches/: mod.rs
ascon-xof128/src/: consts.rs  cxof.rs  lib.rs  xof.rs
ascon-xof128/tests/: mod.rs
bash-prg-hash/: CHANGELOG.md  Cargo.toml  README.md
bash-prg-hash/benches/: mod.rs
bash-prg-hash/src/: lib.rs
bash-prg-hash/tests/: mod.rs
cshake/: CHANGELOG.md  Cargo.toml  README.md
cshake/benches/: mod.rs
cshake/src/: lib.rs
cshake/tests/: cshake.rs
k12/: CHANGELOG.md  Cargo.toml  README.md
k12/benches/: mod.rs
k12/src/: lib.rs  node_turbo_shake.rs  utils.rs
k12/src/custom/: borrow.rs
k12/tests/: mod.rs
shake/: CHANGELOG.md  Cargo.toml  README.md
shake/benches/: mod.rs
shake/src/: lib.rs
shake/tests/: cshake.rs
turboshake/: CHANGELOG.md  Cargo.toml  README.md
turboshake/benches/: mod.rs
turboshake/src/: lib.rs
turboshake/tests/: turboshake.rs
