[package]
name = "bash-prg-hash"
version = "0.1.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/bash-prg-hash"
readme = "README.md"
repository = "https://github.com/RustCrypto/XOFs"
license = "MIT OR Apache-2.0"
keywords = ["belt", "stb", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "bash-prg-hash function (STB 34.101.77-2020)"

[dependencies]
digest = { version = "0.11.3", default-features = false }
bash-f = "0.1"
sponge-cursor = "0.1"

[dev-dependencies]
digest = { version = "0.11.3", default-features = false, features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"]
zeroize = ["digest/zeroize", "sponge-cursor/zeroize"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
